<resources>
    <string name="app_name">To Do List</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sort_by">Sort By</string>
    <string name="search">Search</string>
    <string name="Penting_Mendesak">Penting Mendesak</string>
    <string name="Tidak_Penting_Tidak_Mendesak">Tidak Penting Tidak Mendesak</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="todo">To Do</string>

    <string-array name="priorities">
        <item>Penting Mendesak</item>
        <item>Tidak Penting Mendesak</item>
        <item>Penting Tidak Mendesak</item>
        <item>Tidak Penting Tidak Mendesak</item>
    </string-array>
</resources>