<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/purple_700"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort_by"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/Penting_Mendesak"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/Tidak_Penting_Tidak_Mendesak"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"/>
</menu>